footer aligning fix

--- a/_sass/_layout-footer.scss
+++ b/_sass/_layout-footer.scss
@@ -2,6 +2,7 @@
     .footer {
         display:flex;
         padding:15px;
+        padding-bottom:40px;
     }
 }
 
